--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="scan_tap_message">Tap a NFC tag against the phone</string>
+    <string name="scan_tag_type">Tag type:</string>
+    <string name="scan_technologies">Technologies</string>
+    <string name="scan_memory_information">Memory information</string>
+    <string name="scan_data_format">Data format</string>
+    <string name="scan_tag_name">Tag name</string>
 </resources>
