--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="scan_memory_information">Memory information</string>
     <string name="scan_data_format">Data format</string>
     <string name="scan_tag_name">Tag name</string>
+    <string name="tags_no_nfc_tags_yet">No NFC tags scanned  yet</string>
 </resources>
