--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">NFCDroid</string>
     <string name="title_settings">Settings</string>
     <string name="title_scan">Scan</string>
-    <string name="title_profiles">Profiles</string>
+    <string name="title_tags">Tags</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
