add preferences.xml file for shared preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,27 @@
     <string name="tags_no_nfc_tags_yet">No NFC tags scanned  yet</string>
     <string name="export">export</string>
     <string name="write_to_tag">write to tag</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="appearance">Appearance</string>
+    <string name="theme">Theme</string>
+    <string name="dark_theme">Dark theme</string>
+    <string name="about">About</string>
+    <string name="developers">Developers</string>
+    <string name="miscellaneous">Miscellaneous</string>
+    <string name="history">History</string>
+    <string name="rate_this_app">Rate this App</string>
+    <string name="icons">Icons kindly provided by Icons8</string>
 </resources>
