--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
     <string name="history">History</string>
     <string name="rate_this_app">Rate this App</string>
     <string name="icons">Icons kindly provided by Icons8</string>
+    <string name="add_record">Add a record</string>
+    <string name="more_options">More options</string>
+    <string name="save">Save</string>
 </resources>
