--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="save_tag">Save tag</string>
     <string name="tag_details">Tag details</string>
     <string name="tag_data">Tag data</string>
-    <string name="name_required">You have to specify a name to save this tag</string>
+    <string name="name_required">You must specify a name to save this tag</string>
     <string name="emulate">Emulate</string>
+    <string name="name_must_be_unique">There already exists a Tag with this name</string>
 </resources>
