add error message when there is no data present on a tag to make it impossible to save tags without data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="name_required">You must specify a name to save this tag</string>
     <string name="emulate">Emulate</string>
     <string name="name_must_be_unique">There already exists a Tag with this name</string>
+    <string name="tag_must_not_be_empty">The Tag must not be empty</string>
 </resources>
