--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="no_data_found">No data found</string>
     <string name="tag_number_of_records">Number of records:</string>
     <string name="tag_size">Size:</string>
+    <string name="tap_tag_against_phone">Please tap a NFC Tag against the phone</string>
+    <string name="write_nfc">Write data to NFC Tag</string>
 </resources>
