--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="no_data_found">No data found</string>
     <string name="tag_number_of_records">Number of records:</string>
     <string name="tag_size">Size:</string>
+    <string name="add_data">Add Data</string>
 </resources>
