--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,6 @@
     <string name="add_location_address">Add a Location based on an Address to the Tag</string>
     <string name="enter_address">Enter an Address</string>
     <string name="address_hint">711-2880 Nulla St. Mankato Mississippi 96522</string>
-    <string name="could_not_determine_location">Could not determine Location</string>
+    <string name="could_not_determine_location">Could not determine Location.\n\nAre you connected to the internet?\nDid you enter a valid address?</string>
     <string name="determine_location_failed">Determining Location failed</string>
 </resources>
