--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,6 @@
     <string name="hello">Hello</string>
     <string name="error_while_parsing_mime_type">Invalid Data\n\nError while parsing MIME Type</string>
     <string name="invalid_data">Invalid Data</string>
+    <string name="update_location">Update Location</string>
+    <string name="could_not_get_location">Retrieving location failed\n\nAre you connected?</string>
 </resources>
