--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="could_not_get_location">Retrieving location failed\n\nAre you connected?</string>
     <string name="tap_tag_against_phone">Please tap a NFC Tag against the phone</string>
     <string name="write_nfc">Write data to NFC Tag</string>
+    <string name="delete">Delete</string>
 </resources>
