--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,8 +137,10 @@
     <string name="source_code">Source Code</string>
     <string name="behavior">Behavior</string>
     <string name="display_notifications">Display Notifications</string>
+    <string name="data_written">Data Written</string>
+    <string name="data_written_detail">The Data was successfully written onto the NFC Tag</string>
     <string name="gpl3">GNU GENERAL PUBLIC LICENSE\nVersion 3, 29 June 2007</string>
-    <string name="glp3_content"> Copyright (C) 2007 Free Software Foundation, Inc. &gt;http:&gt;![CDATA[//fsf.org/&lt;
+    <string name="glp3_content"><![CDATA[ Copyright © 2007 Free Software Foundation, Inc. <http://fsf.org/>
  Everyone is permitted to copy and distribute verbatim copies
  of this license document, but changing it is not allowed.
 
@@ -592,7 +594,7 @@ organization, or substantially all assets of one, or subdividing an
 organization, or merging organizations.  If propagation of a covered
 work results from an entity transaction, each party to that
 transaction who receives a copy of the work also receives whatever
-licenses to the work the party's predecessor in interest had or could
+licenses to the work the party\'s predecessor in interest had or could
 give under the previous paragraph, plus a right to possession of the
 Corresponding Source of the work from the predecessor in interest, if
 the predecessor has it or can get it with reasonable efforts.
@@ -609,9 +611,9 @@ sale, or importing the Program or any portion of it.
 
   A "contributor" is a copyright holder who authorizes use under this
 License of the Program or a work on which the Program is based.  The
-work thus licensed is called the contributor's "contributor version".
+work thus licensed is called the contributor\'s "contributor version".
 
-  A contributor's "essential patent claims" are all patent claims
+  A contributor\'s "essential patent claims" are all patent claims
 owned or controlled by the contributor, whether already acquired or
 hereafter acquired, that would be infringed by some manner, permitted
 by this License, of making, using, or selling its contributor version,
@@ -622,7 +624,7 @@ patent sublicenses in a manner consistent with the requirements of
 this License.
 
   Each contributor grants you a non-exclusive, worldwide, royalty-free
-patent license under the contributor's essential patent claims, to
+patent license under the contributor\'s essential patent claims, to
 make, use, sell, offer for sale, import and otherwise run, modify and
 propagate the contents of its contributor version.
 
@@ -643,7 +645,7 @@ patent license for this particular work, or (3) arrange, in a manner
 consistent with the requirements of this License, to extend the patent
 license to downstream recipients.  "Knowingly relying" means you have
 actual knowledge that, but for the patent license, your conveying the
-covered work in a country, or your recipient's use of the covered work
+covered work in a country, or your recipient\'s use of the covered work
 in a country, would infringe one or more identifiable patents in that
 country that you have reason to believe are valid.
 
@@ -674,7 +676,7 @@ or that patent license was granted, prior to 28 March 2007.
 any implied license or other defenses to infringement that may
 otherwise be available to you under applicable patent law.
 
-  12. No Surrender of Others' Freedom.
+  12. No Surrender of Others\' Freedom.
 
   If conditions are imposed on you (whether by court order, agreement or
 otherwise) that contradict the conditions of this License, they do not
@@ -714,7 +716,7 @@ GNU General Public License, you may choose any version ever published
 by the Free Software Foundation.
 
   If the Program specifies that a proxy can decide which future
-versions of the GNU General Public License can be used, that proxy's
+versions of the GNU General Public License can be used, that proxy\'s
 public statement of acceptance of a version permanently authorizes you
 to choose that version for the Program.
 
@@ -769,7 +771,7 @@ state the exclusion of warranty; and each file should have at least
 the "copyright" line and a pointer to where the full notice is found.
 
     NFCApp
-    Copyright (C) 2020  jonas hescl
+    Copyright © 2020  jonas hescl
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -782,32 +784,32 @@ the "copyright" line and a pointer to where the full notice is found.
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with this program.  If not, see ]]&lt;&gt;http://www.gnu.org/licenses/>.
+    along with this program.  If not, see ]]<>http://www.gnu.org/licenses/>.
 
 Also add information on how to contact you by electronic and paper mail.
 
   If the program does terminal interaction, make it output a short
 notice like this when it starts in an interactive mode:
 
-    NFCApp  Copyright (C) 2020  jonas hescl
-    This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
+    NFCApp  Copyright © 2020  jonas hescl
+    This program comes with ABSOLUTELY NO WARRANTY; for details type `show w\'.
     This is free software, and you are welcome to redistribute it
-    under certain conditions; type `show c' for details.
+    under certain conditions; type `show c\' for details.
 
-The hypothetical commands `show w' and `show c' should show the appropriate
-parts of the General Public License.  Of course, your program's commands
+The hypothetical commands `show w\' and `show c\' should show the appropriate
+parts of the General Public License.  Of course, your program\'s commands
 might be different; for a GUI interface, you would use an "about box".
 
   You should also get your employer (if you work as a programmer) or school,
 if any, to sign a "copyright disclaimer" for the program, if necessary.
 For more information on this, and how to apply and follow the GNU GPL, see
-&gt;http://www.gnu.org/licenses/>.
+<http://www.gnu.org/licenses/>.
 
   The GNU General Public License does not permit incorporating your program
 into proprietary programs.  If your program is a subroutine library, you
 may consider it more useful to permit linking proprietary applications with
 the library.  If this is what you want to do, use the GNU Lesser General
 Public License instead of this License.  But first, please read
-&gt;http://www.gnu.org/philosophy/why-not-lgpl.html&lt;.
-</string>
+<http://www.gnu.org/philosophy/why-not-lgpl.html>.
+]]></string>
 </resources>
