--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="display_notifications">Display Notifications</string>
     <string name="data_written">Data Written</string>
     <string name="data_written_detail">The Data was successfully written onto the NFC Tag</string>
+    <string name="invalid_app_name_headline">Invalid App Name</string>
     <string name="gpl3">GNU GENERAL PUBLIC LICENSE\nVersion 3, 29 June 2007</string>
     <string name="glp3_preamble">Copyright © 2007 Free Software Foundation, Inc. &lt;http://fsf.org/&gt;
         Everyone is permitted to copy and distribute verbatim copies
@@ -812,4 +813,5 @@ may consider it more useful to permit linking proprietary applications with
 the library.  If this is what you want to do, use the GNU Lesser General
 Public License instead of this License.  But first, please read
 &lt;http://www.gnu.org/philosophy/why-not-lgpl.html&gt;.</string>
+    <string name="invalid_app_name">Invalid App Name\n\nPlease enter a valid App Name</string>
 </resources>
